FWF-5586 [BUGFIX} - Navbar option visibility issue fix

--- a/forms-flow-nav/src/sidenav/Sidebar.scss
+++ b/forms-flow-nav/src/sidenav/Sidebar.scss
@@ -106,7 +106,7 @@ $animSpeed: 300ms;
     text-align: center;
     // flex-grow: 1;
     overflow-y: auto;
-    margin-bottom: 5rem;
+    margin-bottom: auto;
   }
 
   .accordion {
